# Archis

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  rust-toolchain.toml
kernel/: Cargo.toml  build.rs
kernel/config/x86_64/: driver_linker.ld  linker.ld
kernel/src/: infra.rs  kern.rs  object.rs  pipe.rs  utils.rs
kernel/src/acpica/: mod.rs  osl.rs  table.rs
kernel/src/acpica/acpica_c/: osl.c
kernel/src/cpu/: cpu.rs  interrupts.rs
kernel/src/devices/x86_64/: ec.rs  hpet.rs  ioapic.rs  mod.rs  rtc.rs
kernel/src/drivers/: boot.conf
kernel/src/drivers/acpi/: Cargo.toml  driver.conf
kernel/src/drivers/acpi_intf/: Cargo.toml
kernel/src/drivers/disk/: Cargo.toml  driver.conf
kernel/src/drivers/ec/: Cargo.toml  driver.conf
kernel/src/drivers/i8042/: Cargo.toml  driver.conf
kernel/src/drivers/input/: Cargo.toml  driver.conf
kernel/src/drivers/pci/: Cargo.toml  driver.conf
kernel/src/drivers/test1/: driver.conf
kernel/src/drivers/test2/: driver.conf
kernel/src/drivers/tty/: Cargo.toml  driver.conf
kernel/src/drivers/virt_blk/: Cargo.toml  driver.conf
kernel/src/fs/: file.rs  mod.rs  module_fs.rs  mount.rs  root.rs  utils.rs  vfs.rs
kernel/src/hal/x86_64/: cpu.rs  (+11 more)
kernel/src/intf/: mod.rs  process.rs  system.rs
kernel/src/io/: driver.rs  mod.rs  pnp.rs  stack.rs
kernel/src/loader/: loader.rs  mod.rs  module.rs  user_loader.rs
kernel/src/logger/: framebuffer_logger.rs  kring.rs  mod.rs
kernel/src/mem/: fixed_allocator.rs  frame_allocator.rs  heap_allocator.rs  mod.rs  pool_allocator.rs  virtual_allocator.rs
kernel/src/sched/: cleanup.rs  job.rs  mod.rs  proc.rs  scheduler.rs  timer.rs  user.rs
kernel/src/sync/: lock.rs  semaphore.rs
kernel/src/tests/: mod.rs
(+148 files in other folders)
