[workspace]
resolver = "2"
members = [
    "boot/uefi",
    "kernel",
    "kernel/src/drivers/*",
    "modules/*"
]

[profile.dev]
panic = "abort"


[profile.release]
panic = "abort"
strip = true

[workspace.dependencies]
common = {path = "lib/common"}
kernel_intf = {path = "lib/kernel_intf"}
kmod = {path = "lib/kmod"}
acpi_intf = {path = "kernel/src/drivers/acpi_intf"}
log = "*"
