[package]
name = "aris"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
path = "src/kern.rs"
crate-type = ["cdylib"]

[features]
default = []
stack_down = []
deadlock_detection = []
acpi = ["common/acpi"]
test-kernel = ["common/test-kernel", "kernel_intf/test-kernel"]

[dependencies]
kernel_intf = {workspace = true, features = ["link-kernel"]}
common.workspace = true
rustc-demangle = "*"

# Used for testing
[dev-dependencies]
tests = {path = "../lib/tests"}
ctor = "*"
env_logger = "*"

[build-dependencies]
walkdir = "*"
